# swagger/paths_es_wrapper.yaml
@@ -59,7 +59,7 @@ paths:
       responses:
         '200':
           description: Array of operation data
-        '500': 
+        '500':
           description: Error processing parameters
       tags:
         - wrapper
@@ -110,5 +110,91 @@ paths:
           description: Array of operations data
         '500':
           description: Error processing parameters
+      tags:
+        - wrapper
+
+  "/get_account_power":
+    get:
+      description: Get the account power of an account.
+      operationId: api.es_wrapper.get_account_power
+      parameters:
+        - in: query
+          name: from_date
+          default: "2019-01-01T00:00:00"
+          type: string
+          required: false
+          description: Start date range
+        - in: query
+          name: to_date
+          default: "2019-12-01T00:00:00"
+          type: string
+          required: false
+          description: End date range
+        - in: query
+          name: account
+          default: 1.2.5
+          type: string
+          required: true
+          description: Account to query
+        - in: query
+          name: datapoints
+          default: 50
+          type: integer
+          required: false
+          description: Number of datapoints
+        - in: query
+          name: type
+          default: total
+          type: string
+          required: false
+          description: Type to query (total/proxy)
+      responses:
+        '200':
+          description: TODO ADD DESCRIPTION
+        '500':
+          description: TODO ADD DESCRIPTION
+      tags:
+        - wrapper
+
+  "/get_voteable_votes":
+    get:
+      description: Get the votes for a voteable object.
+      operationId: api.es_wrapper.get_voteable_votes
+      parameters:
+        - in: query
+          name: from_date
+          default: "2019-01-01T00:00:00"
+          type: string
+          required: false
+          description: Start date range
+        - in: query
+          name: to_date
+          default: "2019-12-01T00:00:00"
+          type: string
+          required: false
+          description: End date range
+        - in: query
+          name: id
+          default: "1.14.206"
+          type: string
+          required: true
+          description: Account to query
+        - in: query
+          name: datapoints
+          default: 50
+          type: integer
+          required: false
+          description: Number of datapoints
+        - in: query
+          name: type
+          default: total
+          type: string
+          required: false
+          description: Type of data (total/voters)
+      responses:
+        '200':
+          description: TODO ADD DESCRIPTION
+        '500':
+          description: TODO ADD DESCRIPTION
       tags:
         - wrapper
